contrast issues

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ img {
     width: 100%; 
     height: 100%; 
     background-color: #000000e2;
-    opacity: 0.58; 
+    opacity: 0.72; 
     z-index: 1; 
 }
 
@@ -80,7 +80,7 @@ img {
     line-height: 1.2;
 }
 
-.home-content h3 {
+.home-content h2 {
     font-size: 26px;
     font-weight: 700;
     color: #faada3;
@@ -339,7 +339,7 @@ img {
 
 /* wtr3.html */
 .in-progress {
-    background-image: linear-gradient(#346375, #a6a0a0);
+    background-image: linear-gradient(#346375, #7a6163);
     display: flex;
     justify-content: center;
     align-items: center;
